[tool.poetry]
name = "test_bench"
version = "0.1.0"
description = ""
authors = ["NCPlayz <chowdhurynadir0@outlook.com>"]
include = [
    "tests/*.top",
    "tests/*.btm",
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
rich = "^9.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
